<resources>
    <string name="app_name">Find It Fix It</string>
    <string name="open_map">Open Map</string>
    <string name="fill_form">Fill Form</string>
    <string name="title_activity_retrieve_map">Map</string>
    <string name="add_button_details">Add Details</string>
    <string name="add_details_successfully">The data was added successfully</string>
    <string name="marker_and_data_deleted">The marker and data successfully deleted</string>
    <string name="take_image_button">Set Image</string>
    <string name="upload_image_button">Add Image</string>

    <string name="hint_full_name">Full Name</string>
    <string name="hint_fault">Fault</string>
    <string name="hint_location">Location</string>

    <string name="set_error_full_name">Please fill your full name</string>
    <string name="set_error_fault_type">Please fill your fault type</string>
    <string name="set_error_location">Please press on location button</string>

    <string name="label_location_dialog_title">Allow location access</string>
    <string name="label_location_dialog_body">FiFi requires location permission to give you the best experience. If the request is declined, it will not work properly.</string>
    <string name="label_settings">Settings</string>
    <string name="label_quit">Quit</string>

    <string name="title_alert_dialog">Are you sure to delete marker ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="details">Details</string>
    <string name="name">Name :</string>
    <string name="fault">Fault :</string>

</resources>